rustdocs/errors/rust-bitcoin-io-src-error.rs.txt
error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/io/src/error.rs:5:5
  |
5 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
